--- a/install.yml
+++ b/install.yml
@@ -41,7 +41,29 @@
     - name: Install Open-WebUI inside the virtual environment
       command: /root/open-webui-venv/bin/pip install open-webui
 
-    - name: Run Open-WebUI server
-      shell: /root/open-webui-venv/bin/open-webui serve --port 80 &
-      async: 0
-      poll: 0
+    - name: Create systemd service file for Open-WebUI
+      copy:
+        dest: /etc/systemd/system/open-webui.service
+        content: |
+          [Unit]
+          Description=Open-WebUI Service
+          After=network.target
+
+          [Service]
+          Type=simple
+          ExecStart=/root/open-webui-venv/bin/open-webui serve --port 80
+          WorkingDirectory=/root/open-webui-venv
+          Restart=always
+          User=root
+
+          [Install]
+          WantedBy=multi-user.target
+
+    - name: Reload systemd daemon
+      command: systemctl daemon-reload
+
+    - name: Enable and start Open-WebUI service
+      systemd:
+        name: open-webui
+        enabled: yes
+        state: started
