--- a/install.yml
+++ b/install.yml
@@ -16,7 +16,7 @@
     venv_path: /root/open-webui-venv
     service_name: open-webui
     user: root
-    exec_command: "{{ venv_path }}/bin/open-webui serve --port 80"
+    exec_command: "{{ venv_path }}/bin/open-webui serve --port 80 "
     env_file: /etc/default/open-webui
 
   tasks:
@@ -29,6 +29,11 @@
     - name: install pkgs
       apt:
         name: "{{ system_packages }}"
+        state: present
+
+    - name: install pkgs
+      apt:
+        name: "{{ python_packages }}"
         state: present
 
     - name: install ollama
