--- a/install.yml
+++ b/install.yml
@@ -69,7 +69,7 @@
         creates: "{{ venv_path }}"
 
     - name: Install Open-WebUI inside the virtual environment
-      command: "{{ venv_path }}/bin/pip install open-webui"
+      command: "{{ venv_path }}/bin/pip install open-webui -U"
 
     - name: Create environment file for Open-WebUI
       copy:
