--- a/install.yml
+++ b/install.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  name: install deepseek
+  name: install ai server
   become: yes
   vars:
     webui_port: 80
@@ -14,7 +14,6 @@
       - ffmpeg
       - libsm6
       - libxext6
-      - nginx
     venv_path: /root/open-webui-venv
     service_name: open-webui
     user: root
@@ -68,9 +67,15 @@
         - llama3.2:latest
         - smollm2:latest
         - mistral-nemo:latest
+        - dolphin-phi:latest
       async: 10
       poll: 0
 
+    - name: install pkgs
+      apt:
+        name: nginx
+        state: present
+      notify: stop nginx  
 
     - name: Create a Python virtual environment
       command: python3 -m venv "{{ venv_path }}"
@@ -160,7 +165,7 @@
       command: nginx -t
       changed_when: false
 
-    - name: Reload Nginx service
+    - name: Enable Nginx service
       systemd:
         name: nginx
         state: started
@@ -181,3 +186,8 @@
       systemd:
         name: nginx
         state: restarted
+
+    - name: stop nginx
+      systemd:
+        name: nginx
+        state: stopped
