--- a/install.yml
+++ b/install.yml
@@ -20,7 +20,6 @@
     user: root
     exec_command: "{{ venv_path }}/bin/open-webui serve --port {{ webui_port }} "
     key_file: authorized_keys.vault
-    api: false
     cloudflare: true
     cloudflare_sources:
       - 173.245.48.0/20
@@ -43,9 +42,10 @@
       - granite3-moe:latest
       - llama3.2:latest
       - mistral-nemo:latest
-      - dolphin-phi:latest
       - deepseek-r1:7b
       - gemma:7b
+      - dolphin-phi:latest
+    api: false
 
   tasks:
     - name: Copy private key to remote server
@@ -88,7 +88,7 @@
         state: started
 
     - name: get list of installed ollama models
-      command: ollama list
+      shell: ollama list | egrep -v ID | awk '{print $1}'
       register: ollama_models
       changed_when: false
 
